--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>DocStructure</title>
+    <title>DDLC flow</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
       <!-- Left: Map -->
       <section class="pane pane--map">
         <div class="map-header">
-          <h1 class="app-title">DocStructure</h1>
+          <h1 class="app-title">DDLC flow</h1>
           <div class="map-actions">
             <button id="zoomOutBtn" class="btn btn--ghost" title="Zoom out">
               −
@@ -94,10 +94,10 @@
 
           <!-- Backlink info (populates while hovering a backlink) -->
           <div class="divider"></div>
-          <div class="detail-row">
+          <!-- <div class="detail-row">
             <div class="detail-label">Backlink Name</div>
             <div id="backName" class="detail-value dim">—</div>
-          </div>
+          </div> -->
           <div class="detail-row detail-row--block">
             <div class="detail-label">Backlink Content</div>
             <div id="backContent" class="detail-code dim">—</div>
