updated the file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>DDLC flow</title>
+    <title>Docusaurus flow</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
       <!-- Left: Map -->
       <section class="pane pane--map">
         <div class="map-header">
-          <h1 class="app-title">DDLC flow</h1>
+          <h1 class="app-title">Docusaurus flow</h1>
           <div class="map-actions">
             <button id="zoomOutBtn" class="btn btn--ghost" title="Zoom out">
               −
