--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Docusaurus flow</title>
+    <title>Docusaurus workflow</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
